--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>box</title>
 </head>
 <body>
-    <div class="box" alt="box"> 
+    <div class="main_box">
+    <div class="box" alt="box"></div>
     </div>
 </body>
 </html>
